[gd_scene load_steps=29 format=2]

[ext_resource path="res://asset/Vincent/Jump/jump2.png" type="Texture" id=1]
[ext_resource path="res://asset/Vincent/Jump/jump3.png" type="Texture" id=2]
[ext_resource path="res://asset/Vincent/Jump/jump5.png" type="Texture" id=3]
[ext_resource path="res://asset/Vincent/Jump/jump4.png" type="Texture" id=4]
[ext_resource path="res://asset/attack/1.png" type="Texture" id=5]
[ext_resource path="res://asset/attack/4.png" type="Texture" id=6]
[ext_resource path="res://asset/attack/8.png" type="Texture" id=7]
[ext_resource path="res://asset/attack/2.png" type="Texture" id=8]
[ext_resource path="res://asset/Vincent/Idle/idle_4.png" type="Texture" id=9]
[ext_resource path="res://asset/Vincent/Idle/idle_5.png" type="Texture" id=10]
[ext_resource path="res://Player.gd" type="Script" id=11]
[ext_resource path="res://asset/Vincent/Idle/idle_1.png" type="Texture" id=12]
[ext_resource path="res://asset/Vincent/Idle/idle_2.png" type="Texture" id=13]
[ext_resource path="res://asset/Vincent/Idle/idle_6.png" type="Texture" id=14]
[ext_resource path="res://asset/Vincent/Idle/idle_3.png" type="Texture" id=15]
[ext_resource path="res://asset/attack/3.png" type="Texture" id=16]
[ext_resource path="res://Health.tscn" type="PackedScene" id=17]
[ext_resource path="res://asset/Vincent/RunRight/runR_4.png" type="Texture" id=56]
[ext_resource path="res://asset/Vincent/RunRight/runR_6.png" type="Texture" id=57]
[ext_resource path="res://asset/Vincent/RunRight/runR_1.png" type="Texture" id=58]
[ext_resource path="res://asset/Vincent/RunRight/runR_8.png" type="Texture" id=59]
[ext_resource path="res://asset/Vincent/RunRight/runR_3.png" type="Texture" id=60]
[ext_resource path="res://asset/Vincent/RunRight/runR_7.png" type="Texture" id=61]
[ext_resource path="res://asset/Vincent/RunRight/runR_2.png" type="Texture" id=62]
[ext_resource path="res://asset/Vincent/RunRight/runR_5.png" type="Texture" id=63]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 12 ), ExtResource( 13 ), ExtResource( 15 ), ExtResource( 13 ), ExtResource( 9 ), ExtResource( 10 ), ExtResource( 14 ), ExtResource( 14 ) ],
"loop": true,
"name": "Idle",
"speed": 3.0
}, {
"frames": [ ExtResource( 58 ), ExtResource( 62 ), ExtResource( 60 ), ExtResource( 56 ), ExtResource( 63 ), ExtResource( 57 ), ExtResource( 61 ), ExtResource( 59 ) ],
"loop": true,
"name": "runRight",
"speed": 15.0
}, {
"frames": [ ExtResource( 5 ), ExtResource( 8 ), ExtResource( 16 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 7 ) ],
"loop": false,
"name": "attack",
"speed": 10.0
}, {
"frames": [ ExtResource( 3 ) ],
"loop": false,
"name": "fall",
"speed": 5.0
}, {
"frames": [ ExtResource( 1 ), ExtResource( 2 ), ExtResource( 4 ), ExtResource( 3 ) ],
"loop": false,
"name": "jump",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 19.162, 75.6212 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 35.7833, 71.1185 )

[node name="Player" type="KinematicBody2D" groups=[
"vincent",
]]
scale = Vector2( 1.5, 1.5 )
script = ExtResource( 11 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
scale = Vector2( 0.7, 0.7 )
frames = SubResource( 1 )
animation = "attack"
frame = 5
playing = true

[node name="VincentCollision" type="CollisionShape2D" parent="."]
position = Vector2( -0.793701, 0.793671 )
shape = SubResource( 2 )

[node name="Timer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="AttackArea" type="Area2D" parent="." groups=[
"knives",
]]

[node name="CollisionAttack" type="CollisionShape2D" parent="AttackArea"]
position = Vector2( 55.3748, -7.48303 )
shape = SubResource( 3 )
disabled = true

[node name="Health" parent="." instance=ExtResource( 17 )]
[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
